--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -34,6 +35,39 @@
                 </li>
             </ul>
         </nav>
+
+        <div class="flex flex-1">
+            <div class="about-me__info row">
+            <div class="about-me__info--container">
+                <figure class="about-me__picture--mask">
+                    <img class="about-me__picture" src="./davidbr4gg.github.io-master/assets/me.jpeg" alt="">
+                </figure>
+                <h1 class="about-me__info--title">
+                    Hey! I'm <span class="text-purple">Abdusaid Sawut</span>👋🏼
+                </h1>
+                <p class="about-me__info--para">
+                    I'm a aspiring <strong class="text-purple">frontend software engineer</strong> with a strong passion for building responsive and performant web applications with great user experiences that could have the slightest positive impact on the world
+                </p>
+                <div class="about me__links">
+                    <a href="" class="about-me__link">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="" class="about-me__link">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="" class="about-me__link">
+                        <i class="far fa-envelope"></i>
+                    </a>
+                    <a href="" class="about-me__link">
+                        <i class="fas fa-file-pdf"></i>
+                    </a>
+                </div>
+            </div>
+            <figure class="about-me__img--container">
+                <img src="./davidbr4gg.github.io-master/assets/undraw_websites.svg" class="about-me__img" alt="">
+            </figure>
+        </div>
+        </div>
     </section>
 </body>
 </html>
