--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             <div class="about-me__info row">
             <div class="about-me__info--container">
                 <figure class="about-me__picture--mask">
-                    <img class="about-me__picture" src="./davidbr4gg.github.io-master/assets/me.jpeg" alt="">
+                    <img class="about-me__picture" src="./IMG_2304.jpg" alt="">
                 </figure>
                 <h1 class="about-me__info--title">
-                    Hey! I'm <span class="text-purple">Abdusaid Sawut</span>👋🏼
+                    Hey! I'm <span class="text-purple">Abdusaid Sawut</span> 👋🏼
                 </h1>
                 <p class="about-me__info--para">
                     I'm a aspiring <strong class="text-purple">frontend software engineer</strong> with a strong passion for building responsive and performant web applications with great user experiences that could have the slightest positive impact on the world
@@ -67,6 +67,64 @@
                 <img src="./davidbr4gg.github.io-master/assets/undraw_websites.svg" class="about-me__img" alt="">
             </figure>
         </div>
+        </div>
+    </section>
+
+    <section id="languages">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">This is my <span class="text-purple">technology stack</span></h1>
+                <div class="language__list">
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                        </figure>
+                        <span class="language__name">HTML</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" alt="" class="language__img">
+                        </figure>
+                        <span class="language__name">CSS</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" alt="" class="language__img">
+                        </figure>
+                        <span class="language__name">JavaScript</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png" alt="" class="language__img">
+                        </figure>
+                        <span class="language__name">React</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://cdn.iconscout.com/icon/free/png-256/typescript-3521774-2945272.png" alt="" class="language__img">
+                        </figure>
+                        <span class="language__name">TypeScript</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://cdn.iconscout.com/icon/free/png-256/vue-282497.png" alt="" class="language__img">
+                        </figure>
+                        <span class="language__name">Vue</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://cdn.iconscout.com/icon/free/png-256/nuxt-dot-js-3628959-3030184.png" alt="" class="language__img">
+                        </figure>
+                        <span class="language__name">Nuxt</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://mobx.js.org/img/mobx.png" alt="" class="language__img">
+                        </figure>
+                        <span class="language__name">MobX</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
