--- a/index.html
+++ b/index.html
@@ -127,5 +127,21 @@
             </div>
         </div>
     </section>
+
+    <secion id="projects">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">Here are some of my <span class="text-purple">projects</span></h1>
+                <ul class="projects__list">
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./davidbr4gg.github.io-master/assets/loopit.png" class="project__img" alt="">
+                        </div>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </secion>
 </body>
 </html>
