--- a/index.html
+++ b/index.html
@@ -136,9 +136,66 @@
                     <li class="project">
                         <div class="project__wrapper">
                             <img src="./davidbr4gg.github.io-master/assets/loopit.png" class="project__img" alt="">
+                            <div class="project__description">
+                                <h3 class="project__description--title">Car sales project</h3>
+                                <h4 class="project__description--sub-title">
+                                    Html, CSS, JavaScript, Vue, Vuex
+                                </h4>
+                                <p class="project__description--para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt cum ad rem repellat quaerat assumenda quibusdam ipsa nemo at blanditiis, laborum atque iusto alias itaque repudiandae voluptates? Hic, nostrum natus?
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://github.com/saidtech" target="_blank" class="project__description--link">
+                                       <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="www.mywebsite.com" class="project__description--link">
+                                        <i class="fas fa-link"></i>
+                                     </a>
+                                </div>
+                            </div>
                         </div>
                     </li>
-
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./davidbr4gg.github.io-master/assets/loopit.png" class="project__img" alt="">
+                            <div class="project__description">
+                                <h3 class="project__description--title">Car sales project</h3>
+                                <h4 class="project__description--sub-title">
+                                    Html, CSS, JavaScript, Vue, Vuex
+                                </h4>
+                                <p class="project__description--para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt cum ad rem repellat quaerat assumenda quibusdam ipsa nemo at blanditiis, laborum atque iusto alias itaque repudiandae voluptates? Hic, nostrum natus?
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://github.com/saidtech" target="_blank" class="project__description--link">
+                                       <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="www.mywebsite.com" class="project__description--link">
+                                        <i class="fas fa-link"></i>
+                                     </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./davidbr4gg.github.io-master/assets/loopit.png" class="project__img" alt="">
+                            <div class="project__description">
+                                <h3 class="project__description--title">Car sales project</h3>
+                                <h4 class="project__description--sub-title">
+                                    Html, CSS, JavaScript, Vue, Vuex
+                                </h4>
+                                <p class="project__description--para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt cum ad rem repellat quaerat assumenda quibusdam ipsa nemo at blanditiis, laborum atque iusto alias itaque repudiandae voluptates? Hic, nostrum natus?
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://github.com/saidtech" target="_blank" class="project__description--link">
+                                       <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="www.mywebsite.com" class="project__description--link">
+                                        <i class="fas fa-link"></i>
+                                     </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
