--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
         <nav>
             <div class="personal__logo">Abdusaid Sawut</div>
             <ul class="nav__link--list">
-                <li>
+                <li class="nav__link">
                     <a href="" class="
                     nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black
                     ">Languages</a>
-                </li>
-                <li>
+                </li class="nav__link">
+                <li class="nav__link">
                     <a href="" class="
                     nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black
                     ">Projects</a>
-                </li>
-                <li>
+                </li class="nav__link">
+                <li class="nav__link">
                     <a href="" class="
                     nav__link--anchor
                     nav__link--anchor-primary
                     ">Contact</a>
-                </li>
+                </li class="nav__link">
             </ul>
         </nav>
 
@@ -200,5 +200,42 @@
             </div>
         </div>
     </secion>
+
+    <footer>
+        <div class="row footer__row">
+            <a href="#" class="footer__anchor">
+                <figure class="footer__logo">
+                    <img src="./davidbr4gg.github.io-master/assets/logo.svg" class="footer__log--img" alt="">
+                </figure>
+                <span class="footer__logo--popper">
+                    Top
+                    <i class="fas fa-arrow-up"></i>
+                </span>
+            </a>
+            <div class="footer__social--list">
+                <a href="" class="
+                footer__social--link
+                link__hover--effect
+                link__hover--effect--white"
+                target="_blank">GitHub</a>
+                <a href="" class="
+                footer__social--link
+                link__hover--effect
+                link__hover--effect--white"
+                target="_blank">LinkedIn</a>
+                <a href="mailto:sawut3@gmail.com" class="
+                footer__social--link
+                link__hover--effect
+                link__hover--effect--white"
+                target="_blank">Email</a>
+                <a href="./davidbr4gg.github.io-master/assets/Example Resume.pdf" class="
+                footer__social--link
+                link__hover--effect
+                link__hover--effect--white"
+                target="_blank" download>Resume</a>
+            </div>
+            <div class="footer__copyright">Copyright © 2022 Abdusaid Sawut</div>
+        </div>
+    </footer>
 </body>
 </html>
