--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
             <div class="personal__logo">Abdusaid Sawut</div>
             <ul class="nav__link--list">
                 <li class="nav__link">
-                    <a href="" class="
+                    <a href="#languages" class="
                     nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black
                     ">Languages</a>
                 </li class="nav__link">
                 <li class="nav__link">
-                    <a href="" class="
+                    <a href="#projects" class="
                     nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black
                     ">Projects</a>
                 </li class="nav__link">
                 <li class="nav__link">
-                    <a href="" class="
+                    <a href="mailto:sawut3@gmail.com" class="
                     nav__link--anchor
                     nav__link--anchor-primary
                     ">Contact</a>
@@ -43,12 +43,12 @@
                     <img class="about-me__picture" src="./IMG_2304.jpg" alt="">
                 </figure>
                 <h1 class="about-me__info--title">
-                    Hey! I'm <span class="text-purple">Abdusaid Sawut</span> 👋🏼
+                    Hey! I'm <span class="text-purple">Abdusaid Sawut</span>&nbsp;<span class="wave">👋🏼</span>
                 </h1>
                 <p class="about-me__info--para">
                     I'm a aspiring <strong class="text-purple">frontend software engineer</strong> with a strong passion for building responsive and performant web applications with great user experiences that could have the slightest positive impact on the world
                 </p>
-                <div class="about me__links">
+                <div class="about-me__links">
                     <a href="" class="about-me__link">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
@@ -58,7 +58,7 @@
                     <a href="" class="about-me__link">
                         <i class="far fa-envelope"></i>
                     </a>
-                    <a href="" class="about-me__link">
+                    <a href="./davidbr4gg.github.io-master/assets/Example Resume.pdf" download class="about-me__link">
                         <i class="fas fa-file-pdf"></i>
                     </a>
                 </div>
