chnage the projects

--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
                     I'm a aspiring <strong class="text-purple">frontend software engineer</strong> with a strong passion for building responsive and performant web applications with great user experiences that could have the slightest positive impact on the world
                 </p>
                 <div class="about-me__links">
-                    <a href="" class="about-me__link">
+                    <a href="https://www.linkedin.com/in/abdusaid-sawut" class="about-me__link" target="_blank">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="" class="about-me__link">
+                    <a href="https://github.com/saidtech" class="about-me__link" target="_blank">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="" class="about-me__link">
+                    <a href="mailto:sawut3@gmail.com" class="about-me__link">
                         <i class="far fa-envelope"></i>
                     </a>
-                    <a href="./davidbr4gg.github.io-master/assets/Example Resume.pdf" download class="about-me__link">
+                    <a href="" download class="about-me__link">
                         <i class="fas fa-file-pdf"></i>
                     </a>
                 </div>
             </div>
             <figure class="about-me__img--container">
-                <img src="./davidbr4gg.github.io-master/assets/undraw_websites.svg" class="about-me__img" alt="">
+                <img src="./assets/assets/undraw_websites.svg" class="about-me__img" alt="">
             </figure>
         </div>
         </div>
@@ -135,7 +135,7 @@
                 <ul class="projects__list">
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="./davidbr4gg.github.io-master/assets/loopit.png" class="project__img" alt="">
+                            <img src="./assets/assets/loopit.png" class="project__img" alt="">
                             <div class="project__description">
                                 <h3 class="project__description--title">Car sales project</h3>
                                 <h4 class="project__description--sub-title">
@@ -156,7 +156,7 @@
                     </li>
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="./davidbr4gg.github.io-master/assets/loopit.png" class="project__img" alt="">
+                            <img src="./assets/assets/loopit.png" class="project__img" alt="">
                             <div class="project__description">
                                 <h3 class="project__description--title">Car sales project</h3>
                                 <h4 class="project__description--sub-title">
@@ -177,7 +177,7 @@
                     </li>
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="./davidbr4gg.github.io-master/assets/loopit.png" class="project__img" alt="">
+                            <img src="./assets/assets/loopit.png" class="project__img" alt="">
                             <div class="project__description">
                                 <h3 class="project__description--title">Car sales project</h3>
                                 <h4 class="project__description--sub-title">
@@ -213,12 +213,12 @@
                 </span>
             </a>
             <div class="footer__social--list">
-                <a href="" class="
+                <a href="https://github.com/saidtech" class="
                 footer__social--link
                 link__hover--effect
                 link__hover--effect--white"
                 target="_blank">GitHub</a>
-                <a href="" class="
+                <a href="https://www.linkedin.com/in/abdusaid-sawut" class="
                 footer__social--link
                 link__hover--effect
                 link__hover--effect--white"
