--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <a href="mailto:sawut3@gmail.com" class="about-me__link">
                         <i class="far fa-envelope"></i>
                     </a>
-                    <a href="" download class="about-me__link">
+                    <a href="#" download class="about-me__link">
                         <i class="fas fa-file-pdf"></i>
                     </a>
                 </div>
@@ -86,7 +86,7 @@
                             <img src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">CSS</span>
-                    </div>
+                    <!-- </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
                             <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" alt="" class="language__img">
@@ -122,7 +122,7 @@
                             <img src="https://mobx.js.org/img/mobx.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">MobX</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -135,13 +135,14 @@
                 <ul class="projects__list">
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="./assets/assets/loopit.png" class="project__img" alt="">
+                            <img src="./assets/e-com webiste ss.png" class="project__img" alt="">
                             <div class="project__description">
-                                <h3 class="project__description--title">Car sales project</h3>
+                                <a href="https://saidtech.github.io/E-com-website/" target="_blank">
+                                <h3 class="project__description--title">E-commerce website</h3></a>
                                 <h4 class="project__description--sub-title">
-                                    Html, CSS, JavaScript, Vue, Vuex
+                                    Html, CSS, JavaScript
                                 </h4>
-                                <p class="project__description--para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt cum ad rem repellat quaerat assumenda quibusdam ipsa nemo at blanditiis, laborum atque iusto alias itaque repudiandae voluptates? Hic, nostrum natus?
+                                <p class="project__description--para">My first ever real project I am proud of. An E-commerce website for books using Html, CSS and few lines of code of JavaScript. Note that it is not perfect and have some fixing to do.
                                 </p>
                                 <div class="project__description--links">
                                     <a href="https://github.com/saidtech" target="_blank" class="project__description--link">
@@ -177,7 +178,7 @@
                     </li>
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="./assets/assets/loopit.png" class="project__img" alt="">
+                            <img src="./assets/assets/dashboard.png" class="project__img" alt="">
                             <div class="project__description">
                                 <h3 class="project__description--title">Car sales project</h3>
                                 <h4 class="project__description--sub-title">
@@ -205,7 +206,7 @@
         <div class="row footer__row">
             <a href="#" class="footer__anchor">
                 <figure class="footer__logo">
-                    <img src="./davidbr4gg.github.io-master/assets/logo.svg" class="footer__log--img" alt="">
+                    <img src="https://img.icons8.com/ios-filled/50/FFFFFF/elephant.png" class="footer__log--img" alt="">
                 </figure>
                 <span class="footer__logo--popper">
                     Top
@@ -228,7 +229,7 @@
                 link__hover--effect
                 link__hover--effect--white"
                 target="_blank">Email</a>
-                <a href="./davidbr4gg.github.io-master/assets/Example Resume.pdf" class="
+                <a href="#" class="
                 footer__social--link
                 link__hover--effect
                 link__hover--effect--white"
